--- a/ansible/roles/dockerconf/templates/homepage/settings.yaml
+++ b/ansible/roles/dockerconf/templates/homepage/settings.yaml
@@ -3,6 +3,7 @@ theme: dark
 layout:
   Homelab:
     icon: mdi-server-#FFFFFF
-  Services:
+  Home:
+    icon: mdi-home-automation-#FFFFFF
   External:
     icon: mdi-web-check-#FFFFFF
