add monitoring stack

--- a/ansible/group_vars/home/main.yaml
+++ b/ansible/group_vars/home/main.yaml
@@ -11,4 +11,6 @@ docker:
   homepage: true
   traefik: true
   adguard: true
-  deye_exporter: true
+  monitoring: true
+  prometheus:
+    deye: true
