--- a/ansible/roles/dockerconf/tasks/main.yaml
+++ b/ansible/roles/dockerconf/tasks/main.yaml
@@ -22,3 +22,11 @@
       tags:
         - deye
   when: docker.prometheus.deye
+
+- name: Config Zigbee Adapter
+  ansible.builtin.include_tasks: 
+    file: zigbee.yaml
+    apply:
+      tags:
+        - zigbee
+  when: docker.zigbee
