--- a/gitops/docker/homepage/docker-compose.yaml
+++ b/gitops/docker/homepage/docker-compose.yaml
@@ -3,6 +3,7 @@ services:
   homepage:
     image: ghcr.io/gethomepage/homepage:v0.8.11
     container_name: homepage
+    restart: unless-stopped
     networks:
       - proxy
     volumes:
