--- a/gitops/docker/traefik/docker-compose.yaml
+++ b/gitops/docker/traefik/docker-compose.yaml
@@ -2,6 +2,7 @@ services:
   traefik:
     image: "traefik:v2.11"
     container_name: "traefik"
+    restart: unless-stopped
     networks:
       - proxy
     command:
