--- a/gitops/docker/monitoring/docker-compose.yaml
+++ b/gitops/docker/monitoring/docker-compose.yaml
@@ -57,8 +57,7 @@ services:
     networks:
       - monitoring
     command:
-      - "-username admin"
-      - "-target 192.168.1.4"
+      - "--help"
     env_file:
       - /env_files/draytek/.env
     environment:
