--- a/gitops/docker/monitoring/docker-compose.yaml
+++ b/gitops/docker/monitoring/docker-compose.yaml
@@ -57,7 +57,8 @@ services:
     networks:
       - monitoring
     command:
-      - "--help"
+      - "--username=admin"
+      - "--target=192.168.1.4"
     env_file:
       - /env_files/draytek/.env
     environment:
