--- a/ansible/roles/dockerconf/tasks/main.yaml
+++ b/ansible/roles/dockerconf/tasks/main.yaml
@@ -1,6 +1,5 @@
----
 - name: Config traefik
-  ansible.builtin.include_tasks: 
+  ansible.builtin.include_tasks:
     file: traefik.yaml
     apply:
       tags:
@@ -8,25 +7,25 @@
   when: docker.traefik
 
 - name: Config homepage
-  ansible.builtin.include_tasks: 
+  ansible.builtin.include_tasks:
     file: homepage.yaml
     apply:
       tags:
         - homepage
   when: docker.homepage
 
-- name: Config Deye Exporter
-  ansible.builtin.include_tasks: 
-    file: deye_exporter.yaml
-    apply:
-      tags:
-        - deye
-  when: docker.prometheus.deye
-
 - name: Config Zigbee Adapter
-  ansible.builtin.include_tasks: 
+  ansible.builtin.include_tasks:
     file: zigbee.yaml
     apply:
       tags:
         - zigbee
   when: docker.zigbee
+
+- name: Config Homebridge
+  ansible.builtin.include_tasks:
+    file: homebridge.yaml
+    apply:
+      tags:
+        - homebridge
+  when: docker.homebridge
