--- a/gitops/docker/zigbee2mqtt/docker-compose.yaml
+++ b/gitops/docker/zigbee2mqtt/docker-compose.yaml
@@ -31,7 +31,7 @@ services:
     environment:
       - TZ=Europe/Berlin
     devices:
-      - /dev/serial/by-id/usb-dresden_elektronik_ingenieurtechnik_GmbH_ConBee_II_DE2461586-if00:/dev/ttyACM0
+      - /dev/serial/by-id/usb-dresden_elektronik_ingenieurtechnik_GmbH_ConBee_II_DE2461586-if00:/dev/ttyUSB0
 
 networks:
   mqtt:
