feat(smb): add smb input

--- a/gitops/docker/paperless/docker-compose.yaml
+++ b/gitops/docker/paperless/docker-compose.yaml
@@ -39,7 +39,7 @@ services:
       - data:/usr/src/paperless/data
       - media:/usr/src/paperless/media
       - ./export:/usr/src/paperless/export
-      - ./consume:/usr/src/paperless/consume
+      - /portainer/paperless:/usr/src/paperless/consume
     environment:
       PAPERLESS_REDIS: redis://broker:6379
       PAPERLESS_DBHOST: db
