--- a/gitops/docker/paperless/docker-compose.yaml
+++ b/gitops/docker/paperless/docker-compose.yaml
@@ -46,6 +46,7 @@ services:
       PAPERLESS_URL: https://paper.home.nce.wtf
       USERMAP_UID: 1000
       USERMAP_GID: 100
+      PAPERLESS_CONSUMER_ENABLE_BARCODES: true
       PAPERLESS_CONSUMER_ENABLE_ASN_BARCODE: true
 
 
