--- a/gitops/docker/paperless/docker-compose.yaml
+++ b/gitops/docker/paperless/docker-compose.yaml
@@ -48,7 +48,7 @@ services:
       USERMAP_GID: 100
       PAPERLESS_CONSUMER_ENABLE_BARCODES: true
       PAPERLESS_CONSUMER_ENABLE_ASN_BARCODE: true
-
+      PAPERLESS_CONSUMER_BARCODE_SCANNER: ZXING
 
 volumes:
   data:
