--- a/ansible/roles/dockerconf/tasks/main.yaml
+++ b/ansible/roles/dockerconf/tasks/main.yaml
@@ -30,3 +30,10 @@
         - samba
   when: docker.samba
 
+- name: Config paperless
+  ansible.builtin.include_tasks:
+    file: paperless.yaml
+    apply:
+      tags:
+        - paperless
+  when: docker.paperless
