--- a/gitops/docker/paperless/docker-compose.yaml
+++ b/gitops/docker/paperless/docker-compose.yaml
@@ -17,7 +17,8 @@ services:
     environment:
       POSTGRES_DB: paperless
       POSTGRES_USER: paperless
-      POSTGRES_PASSWORD: paperless
+    env_file:
+      - /env_files/paperless/.env
 
   webserver:
     image: ghcr.io/paperless-ngx/paperless-ngx:2.14.7
@@ -49,6 +50,8 @@ services:
       PAPERLESS_CONSUMER_ENABLE_BARCODES: true
       PAPERLESS_CONSUMER_ENABLE_ASN_BARCODE: true
       PAPERLESS_CONSUMER_BARCODE_SCANNER: ZXING
+    env_file:
+      - /env_files/paperless/.env
 
 volumes:
   data:
