--- a/gitops/docker/paperless/docker-compose.yaml
+++ b/gitops/docker/paperless/docker-compose.yaml
@@ -39,7 +39,7 @@ services:
     volumes:
       - data:/usr/src/paperless/data
       - media:/usr/src/paperless/media
-      - ./export:/usr/src/paperless/export
+      - /portainer/paperless-export:/usr/src/paperless/export
       - /portainer/paperless:/usr/src/paperless/consume
     environment:
       PAPERLESS_REDIS: redis://broker:6379
