--- a/gitops/docker/traefik/docker-compose.yaml
+++ b/gitops/docker/traefik/docker-compose.yaml
@@ -6,7 +6,7 @@ services:
     networks:
       - proxy
     command:
-#      - "--log.level=DEBUG"
+      #      - "--log.level=DEBUG"
       - "--api.insecure=true"
       - "--providers.docker=true"
       - "--providers.docker.exposedbydefault=false"
@@ -16,8 +16,8 @@ services:
       - "--entrypoints.websecure.address=:443"
       - "--providers.docker.network=proxy"
       - "--certificatesresolvers.myresolver.acme.dnschallenge=true"
-      - "--certificatesresolvers.myresolver.acme.dnschallenge.provider=oraclecloud"
-#      - "--certificatesresolvers.myresolver.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory"
+      - "--certificatesresolvers.myresolver.acme.dnschallenge.provider=cloudflare"
+      #      - "--certificatesresolvers.myresolver.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory"
       - "--certificatesresolvers.myresolver.acme.email=770135+nce@users.noreply.github.com"
       - "--certificatesresolvers.myresolver.acme.storage=/letsencrypt/acme.json"
       - "--entrypoints.websecure.http.tls.domains[0].main=home.nce.wtf"
@@ -35,15 +35,9 @@ services:
       - "8080:8080"
     env_file:
       - /env_files/traefik/.env
-    secrets:
-      - api_private_key
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
       - "./certs:/letsencrypt"
 networks:
   proxy:
     external: true
-secrets:
-  api_private_key:
-    file: /home/nce/docker/traefik/api_private_key.pem
-
